CHANGES INTRODUCED IN XINS 1.0.0 BETA 7:

* XINS/Java Server Framework:
  - Removed unused imports.
  - Set the log numbers in a sequential order.
  - Added missing tranlations for some logging messages.

* XINS/Java Common Library:
  - Set the log numbers in the correct order.
  - Fixed missing translations.
  - Removed unused imports.

* XINS/Java Client Framework:
  - Removed unused imports.
  - Removed unused log numbers.
  - Added missing tranlations for some logging messages.

* Specific documentation:
  - Fixed a missing forward slash for the url generated for broken links.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 6:

* XINS/Java Server Framework:
  - Added tests for _GetSettings, _DisableFunction, _EnableFunction and
   _GetFunctionList meta functions.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.

* XINS/Java Common Library:
  - Added the hashCode() and equals() method to the types Date and Timestamp.
  - Fixed the HTTPServiceCaller did not pass the arguments correctly when using
    the GET method.
  - Added TextUtils class.
  - Added tests for the ExpiryFolder and MandatoryArgumentChecker.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.

* XINS/Java Client Framework:
  - Added more test using the AllInOne CAPI.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.
  - Improved the logging.
  - Refactored XINSCallResultParser, improved the documentation for it and
    improved and extended the tests for it. Fixed bug that caused the PCDATA
    content in the data section to be not parsed correctly.

* Tests
  - Added JCoverage to the libraries and added a coverage task that shows the 
    code covered by the tests.
  - Integrated the allinone example to the src/tests directory.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 5:
