@@ -10,6 +10,8 @@ CHANGES INTRODUCED IN XINS 1.0.0 BETA 7:
   - Set the log numbers in the correct order.
   - Fixed missing translations.
   - Removed unused imports.
+  - The MandatoryArgumentChecker also checks that the argument names are not
+    null.
 
 * XINS/Java Client Framework:
   - Removed unused imports.
